Tue Dec 04 19:50:40 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c, gtkextra/gtkplotdt.c:  Add SurfacePlotData which
	  plots 3d graphs from data, so that we can plot all sorts of
	  surfaces.  Also LinePlotDrawAxisLabels was not added as parameter
	  by mistake, so add it

Thu Nov 29 23:02:13 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Add SurfacePlotDrawLegends parameter, also
	  add it to the UI.  Fix LinePlotDrawLabels, and also make sure
	  LinePlotDrawLegends redraws the plot canvas if changed and
	  plot canvas is active.

Tue Nov 27 12:59:21 2012  Jiri (George) Lebl <jirka@5z.com>

	* configure.in: Require MPFR 2.3.0

	* src/funclib.c: add Bessel functions
	  (BesselJ0, BesselJ1, BesselJn, BesselY0, BesselY1, BesselYn)

Tue Nov 27 10:05:50 2012  Jiri (George) Lebl <jirka@5z.com>

	* atlapack/ atblas/: remove, this was just a pain and I don't have
	  time to make it work as is.  We'll try to link to lapack if
	  available or maybe even make it a requirement.  The fortran version
	  seems available on most distros so it should not be a problem.

Fri Jul 13 07:15:05 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/genius.c: avoid a small delay on history, it seems no longer
	  necessary.  Thanks to Ingo Ruhnke.

Sat Jun 23 13:21:05 2012  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theory/primes.gel: update where gimps is up to

Thu May 31 11:54:40 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c, help/C/gel-function-list.xml: Add
	  LineplotDrawAxisLabels parameter and corresponding checkbox on the
	  plotting window to allow not drawing axis labels, useful for
	  doing tiny scaled down diagrams.

Sat Apr 28 16:58:20 2012  Jiri (George) Lebl <jirka@5z.com>

	* Makefile.am, configure.in, atlapack, atblas: add LAPACK/BLAS, but
	  so far we don't use them.  We'll probably want to cull the parts
	  we don't use otherwise it just takes forever to compile

Sun Apr 22 23:52:34 2012  Jiri (George) Lebl <jirka@5z.com>
