@@ -1,3 +1,9 @@
+Tue Dec 04 23:31:30 2012  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: some cleanup with respect to fitting dependent
+	  axis on surfaces.  Also fix fitting dependent axis for surfaces
+	  plotted with SurfacePlotData
+
 Tue Dec 04 19:50:40 2012  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c, gtkextra/gtkplotdt.c:  Add SurfacePlotData which
